<resources>
    <string name="app_name">小黑Life</string>
    <string name="skip">点击跳过</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="again_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="immediate_register">立即注册</string>
    <string name="immediate_update">立即修改</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_using_weibo">使用新浪微博登录</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="user_or_password_cannot_be_empty">用户名或密码不能为空</string>
    <string name="the_password_entered_twice_is_inconsistent">两次输入的密码不一致</string>
    <string name="please_enter_the_old_password">原密码有误，请重新输入</string>
    <string name="new_or_old_password_cannot_be_empty">原密码或新密码不能为空</string>
    <string name="the_new_password_entered_twice_is_inconsistent">两次输入的新密码不一致</string>
    <string name="password_modified_successfully">密码修改成功，请重新登录</string>
    <string name="login_fail">登录失败，请稍后重试</string>
    <string name="user_name_tips">用户名可包含字母、数字及中文</string>
    <string name="password_tips">密码可包含字母、数字</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="news">新闻头条</string>
    <string name="history">历史上的今天</string>
    <string name="car">汽车之家</string>
    <string name="recipe">菜谱大全</string>
    <string name="zhihu">知乎日报</string>
    <string name="tao_ticket">淘票票</string>
    <string name="settings">设置</string>
    <string name="top">头条</string>
    <string name="society">社会</string>
    <string name="internal">国内</string>
    <string name="international">国际</string>
    <string name="disport">娱乐</string>
    <string name="physical">体育</string>
    <string name="military">军事</string>
    <string name="science">科技</string>
    <string name="finance">财经</string>
    <string name="fashion">时尚</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="type">型号</string>
    <string name="guide_price">指导价</string>
    <string name="input_dish_name">输入菜品名称</string>
    <string name="search">搜索</string>
    <string name="summary">简介</string>
    <string name="ingredient">用料</string>
    <string name="method">做法</string>
    <string name="resemble">相关推荐</string>
    <string name="no_summary">暂无简介</string>
    <string name="no_ingredient">暂无用料</string>
    <string name="drop_down_refresh">下拉刷新</string>
    <string name="release_update">释放更新</string>
    <string name="refreshing">刷新中...</string>
    <string name="loading">加载中...</string>
    <string name="querying">查询中...</string>
    <string name="logining">登录中</string>
    <string name="user_profile">用户资料</string>
    <string name="update_password">修改密码</string>
    <string name="about_soft">关于软件</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="gender">性&#8194;&#8194;别</string>
    <string name="birthday">生&#8194;&#8194;日</string>
    <string name="mobile_phone">手机号</string>
    <string name="please_put_profile">请点击添加</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="submit">确定</string>
    <string name="cancel">取消</string>
    <string name="soft_version">软件版本</string>
    <string name="reward_developer">打赏开发者</string>
    <string name="choose_mode_pay">请选择支付方式</string>
    <string name="ali_pay">支付宝</string>
    <string name="wx_pay">微信支付</string>
    <string name="union_pay">银联支付</string>
    <string name="confirmation_of_pay">确认支付</string>
    <string name="home">首页</string>
    <string name="themes">专题</string>
    <string name="sections">专栏</string>
    <string name="today_hot_news">今日热闻</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="source">来源</string>
    <string name="editor">主编</string>
    <string name="greater_than_99">99+</string>
    <string name="first_one">已经是第一条了</string>
    <string name="last_one">已经是最后一条了</string>
    <string name="comment">条评论</string>
    <string name="long_comment">长评论</string>
    <string name="short_comment">短评论</string>
    <string name="share_subject">分享</string>
    <string name="share_from_zhihu">来自「阅知乎」的分享:</string>
</resources>
