<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RadioGroup
        android:id="@+id/group_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/btn_man"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/chad_10dp"
            android:text="@string/man" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/btn_woman"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/chad_10dp"
            android:text="@string/woman" />
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chad_5dp"
        android:layout_marginLeft="@dimen/chad_5dp"
        android:background="@drawable/btn_pay"
        android:text="@string/submit"
        android:textColor="@color/color_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_radio" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/chad_5dp"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginRight="@dimen/chad_5dp"
        android:background="@drawable/btn_pay"
        android:text="@string/cancel"
        android:textColor="@color/color_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_submit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_radio" />

</android.support.constraint.ConstraintLayout>