<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chad_10dp"
        android:background="@android:color/white"
        android:padding="@dimen/chad_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_title_user_name"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:textColor="@color/colorSubText"
            android:textSize="@dimen/chad_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_title_user_name"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chad_10dp"
        android:background="@android:color/white"
        android:padding="@dimen/chad_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_title_gender"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:textColor="@color/colorSubText"
            android:textSize="@dimen/chad_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_title_gender"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chad_10dp"
        android:background="@android:color/white"
        android:padding="@dimen/chad_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_title_birthday"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:textColor="@color/colorSubText"
            android:textSize="@dimen/chad_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_title_birthday"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/chad_10dp"
        android:background="@android:color/white"
        android:padding="@dimen/chad_10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_title_mobile_phone"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_mobile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:textColor="@color/colorSubText"
            android:textSize="@dimen/chad_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_title_mobile_phone"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>