<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/layout_tips_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginTop="@dimen/chad_70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/chad_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_tips_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_tips_user_name"
            style="@style/SubTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginRight="@dimen/chad_10dp"
        android:background="@drawable/bg_login_edit_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/chad_10dp"
        app:layout_constraintTop_toBottomOf="@id/layout_tips_user_name">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_user_name"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:background="@android:color/transparent"
            android:hint="@string/user_name"
            android:maxLength="16"
            android:padding="@dimen/chad_5dp"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tips_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginTop="@dimen/chad_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/chad_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_user_name">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/image_tips_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/text_tips_password"
            style="@style/SubTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginRight="@dimen/chad_10dp"
        android:background="@drawable/bg_login_edit_shape"
        android:orientation="horizontal"
        android:padding="@dimen/chad_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_tips_password">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_password"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:background="@android:color/transparent"
            android:digits="@string/password_digits"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/chad_5dp"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginRight="@dimen/chad_10dp"
        android:layout_marginTop="@dimen/chad_10dp"
        android:background="@drawable/bg_login_edit_shape"
        android:orientation="horizontal"
        android:padding="@dimen/chad_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_password">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_password_again"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/chad_10dp"
            android:background="@android:color/transparent"
            android:digits="@string/password_digits"
            android:hint="@string/again_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="@dimen/chad_5dp"
            android:singleLine="true" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/chad_10dp"
        android:layout_marginRight="@dimen/chad_10dp"
        android:layout_marginTop="@dimen/chad_20dp"
        android:background="@drawable/btn_blue"
        android:text="@string/immediate_register"
        android:textColor="@color/color_button_text"
        android:textSize="@dimen/chad_18sp"
        app:layout_constraintTop_toBottomOf="@id/layout_password_again" />

</android.support.constraint.ConstraintLayout>